--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -117,3 +117,20 @@ de:
         less_than_or_equal_to: "muss kleiner oder gleich {{count}} sein"
         odd: "muss ungerade sein"
         even: "muss gerade sein"
+
+    models:
+      protest_mail: Protestmail
+      activist: Aktivistin
+      
+    attributes:
+      protest_mail:
+        subject: Betreff
+        body: Inhalt
+      activist:
+        title: Titel
+        forename: Vorname
+        surename: Nachname
+        street: Strasse
+        zipcode: Postleitzahl
+        city: Stadt
+        email: E-Mail
